objects/Contact/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <label>Agent Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>