objects/Contact/fields/Agent_Rank__c.field-meta.xml
<CustomField>
    <fullName>Agent_Rank__c</fullName>
    <label>Agent Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>