objects/Contact/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>