objects/Contact/fields/Blood_Type__c.field-meta.xml
<CustomField>
    <fullName>Blood_Type__c</fullName>
    <label>Blood Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>Ab</fullName>
            </value>
            <value>
                <fullName>Ab+</fullName>
            </value>
            <value>
                <fullName>B-</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>O+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>