objects/Contact/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>