objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>