objects/Contact/fields/Current_NPS__c.field-meta.xml
<CustomField>
    <fullName>Current_NPS__c</fullName>
    <label>Current NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>