objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afro American</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>