objects/Contact/fields/FATCA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FATCA_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FATCA Indicator</label>
    <type>Checkbox</type>
</CustomField>