objects/Contact/fields/FATCA_Last_Update_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FATCA_Last_Update_DateTime__c</fullName>
    <label>FATCA Last Update Date Time</label>
    <type>DateTime</type>
</CustomField>