objects/Contact/fields/Highest_Education__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education__c</fullName>
    <label>Highest Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Post Graduate</fullName>
            </value>
            <value>
                <fullName>Professional Certification</fullName>
            </value>
            <value>
                <fullName>Second Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>