objects/Contact/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>It is the combination of SourceSystem and ExternalID with the format as SourceSystem-ExternalID. The purpose is only to support the API integration pattern with the unique ExternalID for SFDC limitation and performance.</description>
    <externalId>true</externalId>
    <inlineHelpText>It is the combination of SourceSystem and ExternalID with the format as SourceSystem-ExternalID. The purpose is only to support the API integration pattern with the unique ExternalID for SFDC limitation and performance.</inlineHelpText>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>