objects/Contact/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>