objects/Contact/fields/Latest_Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Latest_Salary_Range__c</fullName>
    <label>Latest Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000-2000</fullName>
            </value>
            <value>
                <fullName>2000-3000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>