objects/Contact/fields/Latest_Survey_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Survey_Response_Date__c</fullName>
    <label>Latest Survey Response Date</label>
    <type>Date</type>
</CustomField>