objects/Contact/fields/Latest_Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Survey_Sent_Date__c</fullName>
    <label>Latest Survey Sent Date</label>
    <type>Date</type>
</CustomField>