objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>