objects/Contact/fields/Occupation_Class__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Class__c</fullName>
    <label>Occupation Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2A+</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>4A</fullName>
            </value>
            <value>
                <fullName>5A</fullName>
            </value>
            <value>
                <fullName>6A</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>