objects/Contact/fields/Previous_NPS__c.field-meta.xml
<CustomField>
    <fullName>Previous_NPS__c</fullName>
    <label>Previous NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>