objects/Contact/fields/Primary_Account_Registration__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Account Registration</label>
    <referenceTo>Account_Registration__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>