objects/Contact/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>