objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>