objects/Contact/fields/Revised_NPS__c.field-meta.xml
<CustomField>
    <fullName>Revised_NPS__c</fullName>
    <label>Revised NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>